--- a/dev/index.html
+++ b/dev/index.html
@@ -42,64 +42,57 @@
       </div>
       </section>
       <section class="header__second-section">
-        <a href="index.html">
-        <img src="images/seazone-logo-image.svg" alt="seazone-logo-image" />
+        <a href="index.html" class="header__logo-image-link">
+        <img src="images/seazone-logo-image.svg" alt="seazone-logo-image" class="seazone-logo-image" />
     </a>
+    <img src="images/menu-icon.svg" alt="menu-icon" class="header__menu">
         <nav class="header__nav">
           <ul class="header__nav-list">
             <li class="header__nav-item">
               <a href="#" class="header__nav-link"
-                ><img
-                  src="images/quick-nav-icon.svg"
-                  alt="quick-nav-icon"
-                  class="header__nav-item-icon"
-                /><span class="header__nav-item-text">Quick Nav</span></a
+                ><svg width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M10.5 8.9C9.89 8.9 9.4 9.39 9.4 10C9.4 10.61 9.89 11.1 10.5 11.1C11.11 11.1 11.6 10.61 11.6 10C11.6 9.39 11.11 8.9 10.5 8.9ZM10.5 0C4.98 0 0.5 4.48 0.5 10C0.5 15.52 4.98 20 10.5 20C16.02 20 20.5 15.52 20.5 10C20.5 4.48 16.02 0 10.5 0ZM12.69 12.19L4.5 16L8.31 7.81L16.5 4L12.69 12.19Z" fill="white" fill-opacity="0.72" class="header__nav-item-icon"/>
+                  </svg><span class="header__nav-item-text">Quick Nav</span></a
               >
             </li>
             <li class="header__nav-item">
               <a href="#" class="header__nav-link"
-                ><img
-                  src="images/dashboard-icon.svg"
-                  alt="dashboard-icon"
-                  class="header__nav-item-icon"
-                /><span class="header__nav-item-text">Dashboard</span></a
+                ><svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M19.5 3H5.5C4.4 3 3.5 3.9 3.5 5V19C3.5 20.1 4.4 21 5.5 21H19.5C20.6 21 21.5 20.1 21.5 19V5C21.5 3.9 20.6 3 19.5 3ZM9.5 17H7.5V10H9.5V17ZM13.5 17H11.5V7H13.5V17ZM17.5 17H15.5V13H17.5V17Z" fill="white" fill-opacity="0.72" class="header__nav-item-icon"/>
+                  </svg>
+                  <span class="header__nav-item-text">Dashboard</span></a
               >
             </li>
             <li class="header__nav-item">
               <a href="#" class="header__nav-link"
-                ><img
-                  src="images/finance-icon.svg"
-                  alt="finance-icon"
-                  class="header__nav-item-icon" /><span
+                ><svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M12.5 2C6.98 2 2.5 6.48 2.5 12C2.5 17.52 6.98 22 12.5 22C18.02 22 22.5 17.52 22.5 12C22.5 6.48 18.02 2 12.5 2ZM13.91 18.09V20H11.24V18.07C9.53 17.71 8.08 16.61 7.97 14.67H9.93C10.03 15.72 10.75 16.54 12.58 16.54C14.54 16.54 14.98 15.56 14.98 14.95C14.98 14.12 14.54 13.34 12.31 12.81C9.83 12.21 8.13 11.19 8.13 9.14C8.13 7.42 9.52 6.3 11.24 5.93V4H13.91V5.95C15.77 6.4 16.7 7.81 16.76 9.34H14.8C14.75 8.23 14.16 7.47 12.58 7.47C11.08 7.47 10.18 8.15 10.18 9.11C10.18 9.95 10.83 10.5 12.85 11.02C14.87 11.54 17.03 12.41 17.03 14.93C17.02 16.76 15.65 17.76 13.91 18.09Z" fill="white" fill-opacity="0.72" class="header__nav-item-icon"/>
+                  </svg>
+                  <span
                   class="header__nav-item-text"
                   >Finance</span
-                ><img
-                  src="images/arrow-icon.svg"
-                  alt="arrow-icon"
-                  class="header__nav-item-dropdown"
-              /></a>
+                ><svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M7.5 10L12.5 15L17.5 10H7.5Z" fill="white" fill-opacity="0.72" class="header__nav-item-dropdown"/>
+                  </svg></a>
             </li>
-            <li class="header__nav-item">
+            <li class="header__nav-item-visible">
               <a href="#" class="header__nav-link"
-                ><img
-                  src="images/maintenance-icon.svg"
-                  alt="maintenance-icon"
-                  class="header__nav-item-icon" /><span
+                ><svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M19.5 5V19H5.5V5H19.5ZM20.6 3H4.4C3.9 3 3.5 3.4 3.5 3.9V20.1C3.5 20.5 3.9 21 4.4 21H20.6C21 21 21.5 20.5 21.5 20.1V3.9C21.5 3.4 21 3 20.6 3ZM11.5 7H17.5V9H11.5V7ZM11.5 11H17.5V13H11.5V11ZM11.5 15H17.5V17H11.5V15ZM7.5 7H9.5V9H7.5V7ZM7.5 11H9.5V13H7.5V11ZM7.5 15H9.5V17H7.5V15Z" fill="white" fill-opacity="0.72" class="header__nav-item-icon"/>
+                  </svg>
+                  <span
                   class="header__nav-item-text"
                   >Maintenance</span
-                ><img
-                  src="images/arrow-icon.svg"
-                  alt="arrow-icon"
-                  class="header__nav-item-dropdown"
-              /></a>
+                ><svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M7.5 10L12.5 15L17.5 10H7.5Z" fill="white" fill-opacity="0.72" class="header__nav-item-dropdown"/>
+                  </svg></a>
             </li>
             <li class="header__nav-item">
               <a href="#" class="header__nav-link"
-                ><img
-                  src="images/calendar-icon.svg"
-                  alt="calendar-icon"
-                  class="header__nav-item-icon"
-                /><span class="header__nav-item-text">Calendar</span></a
+                ><svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M18.5 4H19.5C20.6 4 21.5 4.9 21.5 6V20C21.5 21.1 20.6 22 19.5 22H5.5C4.39 22 3.5 21.1 3.5 20L3.51 6C3.51 4.9 4.39 4 5.5 4H6.5V2H8.5V4H16.5V2H18.5V4ZM16.5001 20C15.8051 20 15.1102 19.765 14.5002 19.34C13.2803 20.195 11.7204 20.195 10.5005 19.34C9.8905 19.765 9.19555 20 8.5006 20H7.50066H5.5V9H19.5V20H17.5H16.5001ZM8.5006 19H8.4756L7.52566 15.66C7.50452 15.5963 7.49631 15.5291 7.50152 15.4622C7.50673 15.3953 7.52524 15.3302 7.55598 15.2706C7.58672 15.2109 7.62907 15.1581 7.68052 15.115C7.73198 15.072 7.79152 15.0397 7.85564 15.02L8.5006 14.81V12.5C8.5006 11.95 8.95057 11.5 9.50053 11.5H11.0004V10H14.0002V11.5H15.5001C16.0501 11.5 16.5001 11.95 16.5001 12.5V14.81L17.14 15.02C17.27 15.06 17.38 15.15 17.44 15.27C17.5 15.39 17.51 15.53 17.47 15.66L16.5251 19H16.5001C15.7001 19 14.9902 18.56 14.5002 18C14.0102 18.56 13.3003 19 12.5003 19C11.7004 19 10.9904 18.56 10.5005 18C10.0105 18.56 9.30054 19 8.5006 19ZM15.5001 12.5H9.50053V14.485L12.5003 13.5L15.5001 14.485V12.5Z" fill="white" fill-opacity="0.72" class="header__nav-item-icon"/>
+                  </svg>
+                  <span class="header__nav-item-text">Calendar</span></a
               >
             </li>
             <li class="header__nav-item">
@@ -110,48 +103,39 @@
                   class="header__nav-item-icon" /><span
                   class="header__nav-item-text"
                   >Boat profile</span
-                ><img
-                  src="images/arrow-icon.svg"
-                  alt="arrow-icon"
-                  class="header__nav-item-dropdown"
-              /></a>
+                ><svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M7.5 10L12.5 15L17.5 10H7.5Z" fill="white" fill-opacity="0.72" class="header__nav-item-dropdown"/>
+                  </svg></a>
             </li>
             <li class="header__nav-item">
               <a href="#" class="header__nav-link"
-                ><img
-                  src="images/my-crew-icon.svg"
-                  alt="my-crew-icon"
-                  class="header__nav-item-icon"
-                /><span class="header__nav-item-text">My crew</span></a
+                ><svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M16.5 11C18.16 11 19.49 9.66 19.49 8C19.49 6.34 18.16 5 16.5 5C14.84 5 13.5 6.34 13.5 8C13.5 9.66 14.84 11 16.5 11ZM8.5 11C10.16 11 11.49 9.66 11.49 8C11.49 6.34 10.16 5 8.5 5C6.84 5 5.5 6.34 5.5 8C5.5 9.66 6.84 11 8.5 11ZM8.5 13C6.17 13 1.5 14.17 1.5 16.5V19H15.5V16.5C15.5 14.17 10.83 13 8.5 13ZM16.5 13C16.21 13 15.88 13.02 15.53 13.05C16.69 13.89 17.5 15.02 17.5 16.5V19H23.5V16.5C23.5 14.17 18.83 13 16.5 13Z" fill="white" fill-opacity="0.72" class="header__nav-item-icon"/>
+                  </svg><span class="header__nav-item-text">My crew</span></a
               >
             </li>
             <li class="header__nav-item">
               <a href="#" class="header__nav-link"
-                ><img
-                  src="images/charters-icon.svg"
-                  alt="charters-iconimages/arrow-icon.svg"
-                  class="header__nav-item-icon" /><span
+                ><svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M12.49 2C6.97 2 2.5 6.48 2.5 12C2.5 17.52 6.97 22 12.49 22C18.02 22 22.5 17.52 22.5 12C22.5 6.48 18.02 2 12.49 2ZM19.42 8H16.47C16.157 6.76146 15.6936 5.5659 15.09 4.44C16.9141 5.068 18.4512 6.33172 19.42 8ZM12.5 4.04C13.33 5.24 13.98 6.57 14.41 8H10.59C11.02 6.57 11.67 5.24 12.5 4.04ZM4.76 14C4.6 13.36 4.5 12.69 4.5 12C4.5 11.31 4.6 10.64 4.76 10H8.14C8.06 10.66 8 11.32 8 12C8 12.68 8.06 13.34 8.14 14H4.76ZM5.58 16H8.53C8.85 17.25 9.31 18.45 9.91 19.56C8.08397 18.9354 6.54583 17.6708 5.58 16ZM8.53 8H5.58C6.54583 6.32918 8.08397 5.06457 9.91 4.44C9.30643 5.5659 8.84298 6.76146 8.53 8ZM12.5 19.96C11.67 18.76 11.02 17.43 10.59 16H14.41C13.98 17.43 13.33 18.76 12.5 19.96ZM14.84 14H10.16C10.07 13.34 10 12.68 10 12C10 11.32 10.07 10.65 10.16 10H14.84C14.93 10.65 15 11.32 15 12C15 12.68 14.93 13.34 14.84 14ZM15.09 19.56C15.69 18.45 16.15 17.25 16.47 16H19.42C18.4512 17.6683 16.9141 18.932 15.09 19.56ZM16.86 14C16.94 13.34 17 12.68 17 12C17 11.32 16.94 10.66 16.86 10H20.24C20.4 10.64 20.5 11.31 20.5 12C20.5 12.69 20.4 13.36 20.24 14H16.86Z" fill="white" fill-opacity="0.72" class="header__nav-item-icon"/>
+                  </svg><span
                   class="header__nav-item-text"
                   >Charters</span
-                ><img
-                  src="images/arrow-icon.svg"
-                  alt="arrow-icon"
-                  class="header__nav-item-dropdown"
-              /></a>
+                ><svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M7.5 10L12.5 15L17.5 10H7.5Z" fill="white" fill-opacity="0.72" class="header__nav-item-dropdown"/>
+                  </svg></a>
             </li>
             <li class="header__nav-item">
               <a href="#" class="header__nav-link"
-                ><img
-                  src="images/search-icon.svg"
-                  alt="search-icon"
-                  class="header__nav-item-icon" /><span
+                ><svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M18.9705 11.9999C18.9705 15.5735 16.0735 18.4705 12.4999 18.4705C8.92628 18.4705 6.0293 15.5735 6.0293 11.9999C6.0293 8.42628 8.92628 5.5293 12.4999 5.5293C16.0735 5.5293 18.9705 8.42628 18.9705 11.9999ZM18.1075 18.3487C16.6137 19.6691 14.6504 20.4705 12.4999 20.4705C7.82171 20.4705 4.0293 16.6781 4.0293 11.9999C4.0293 7.32171 7.82171 3.5293 12.4999 3.5293C17.1781 3.5293 20.9705 7.32171 20.9705 11.9999C20.9705 13.807 20.4046 15.4819 19.4403 16.8572L22.4687 19.4722C22.8867 19.8332 22.933 20.4646 22.572 20.8826C22.2111 21.3006 21.5796 21.3469 21.1616 20.9859L18.1075 18.3487Z" fill="white" fill-opacity="0.72"  class="header__nav-item-icon"/>
+                  </svg>
+                  <span
                   class="header__nav-item-text"
                   >Search</span
-                ><img
-                  src="images/arrow-icon.svg"
-                  alt="arrow-icon"
-                  class="header__nav-item-dropdown"
-              /></a>
+                ><svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M7.5 10L12.5 15L17.5 10H7.5Z" fill="white" fill-opacity="0.72" class="header__nav-item-dropdown"/>
+                  </svg></a>
             </li>
           </ul>
         </nav>
@@ -173,12 +157,15 @@
             <img src="images/profile-photo.svg" alt="profile-photo" class="header__info-card-profile-photo">
             <img src="images/profile-photo.svg" alt="profile-photo" class="header__info-card-profile-photo">
             <img src="images/profile-photo.svg" alt="profile-photo" class="header__info-card-profile-photo">
-            <img src="images/profile-photo.svg" alt="profile-photo" class="header__info-card-profile-photo">
-            <img src="images/profile-photo.svg" alt="profile-photo" class="header__info-card-profile-photo">
+            <img src="images/profile-photo.svg" alt="profile-photo" class="header__info-card-profile-photo header__info-card-profile-photo-hidden">
+            <img src="images/profile-photo.svg" alt="profile-photo" class="header__info-card-profile-photo header__info-card-profile-photo-hidden">
             <button class="header__info-card-profile-photo-button">+2</button>
           </div>
         </div>
         </div>
+      </div>
+      <div class="header__title">
+        <span>Maintenance dashboard</span>
       </div>
       <div class="header__downloader">
         <div class="header__downloader-icon-text">
