--- a/dev/index.html
+++ b/dev/index.html
@@ -421,6 +421,33 @@
                 </button>
             </div>
         </div>
+        <div class="markup">
+            <div class="tasks">
+                <span class="text">Tasks</span>
+            </div>
+
+            <div class="position">
+                <span class="text">boat position history</span>
+            </div>
+            <div class='work-lists'>
+                <span class="text">open work lists</span>
+            </div>
+            <div class='systems'>
+                <span class="text">Systems</span>
+            </div>
+            <div class="added-tasks">
+                <span class="text">Recently added tasks</span>
+            </div>
+            <div class="yellow">
+                <span class="text">yellow</span>
+            </div>
+            <div class="calendar">
+                <span class="text">Boat calendar</span>
+            </div>
+            <div class="crew-list">
+                <span class="text">Crew list</span>
+            </div>
+        </div>
     </main>
 </div>
 </body>
