--- a/dev/index.html
+++ b/dev/index.html
@@ -590,12 +590,18 @@
                 <span class="assignee-name"></span>
               </div>
               <div class="tasks-sum-button">
-                <span class="assignee-profile__tasks-sum assignee-profile__tasks-sum_unassigned">6 task(s)</span>
+                <span class="tasks-sum tasks-sum_unassigned">6 task(s)</span>
+                <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M10.707 18.207L16.414 12.5L10.707 6.79297L9.293 8.20697L13.586 12.5L9.293 16.793L10.707 18.207Z"
+                    fill="#828282"/>
+                </svg>
+
               </div>
             </div>
             <div class="assignee-congestion">
-              <div class="assignee-congestion__rendering assignee-congestion__rendering_unassigned" style="height: 100%;
-    width: 45%;"></div>
+              <div class="assignee-congestion__rendering assignee-congestion__rendering_unassigned"
+                   style="width: 45%;"></div>
             </div>
           </div>
           <div class="assignee-panel">
@@ -611,12 +617,16 @@
                 <span class="assignee-name"> • &ltname ...&gt</span>
               </div>
               <div class="tasks-sum-button">
-                <span class="assignee-profile__tasks-sum">12 task(s)</span>
+                <span class="tasks-sum">12 task(s)</span>
+                <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M10.707 18.207L16.414 12.5L10.707 6.79297L9.293 8.20697L13.586 12.5L9.293 16.793L10.707 18.207Z"
+                    fill="#828282"/>
+                </svg>
               </div>
             </div>
             <div class="assignee-congestion">
-              <div class="assignee-congestion__rendering" style="height: 100%;
-    width: 85%;"></div>
+              <div class="assignee-congestion__rendering" style="width: 85%;"></div>
             </div>
           </div>
           <div class="assignee-panel">
@@ -632,12 +642,16 @@
                 <span class="assignee-name"> • Suzanne Maria Bernez</span>
               </div>
               <div class="tasks-sum-button">
-                <span class="assignee-profile__tasks-sum">8 task(s)</span>
+                <span class="tasks-sum">8 task(s)</span>
+                <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M10.707 18.207L16.414 12.5L10.707 6.79297L9.293 8.20697L13.586 12.5L9.293 16.793L10.707 18.207Z"
+                    fill="#828282"/>
+                </svg>
               </div>
             </div>
             <div class="assignee-congestion">
-              <div class="assignee-congestion__rendering" style="height: 100%;
-    width: 65%;"></div>
+              <div class="assignee-congestion__rendering" style="width: 65%;"></div>
             </div>
           </div>
           <div class="assignee-panel">
@@ -653,12 +667,16 @@
                 <span class="assignee-name"> • Mahatma Gautama</span>
               </div>
               <div class="tasks-sum-button">
-                <span class="assignee-profile__tasks-sum">4 task(s)</span>
+                <span class="tasks-sum">4 task(s)</span>
+                <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M10.707 18.207L16.414 12.5L10.707 6.79297L9.293 8.20697L13.586 12.5L9.293 16.793L10.707 18.207Z"
+                    fill="#828282"/>
+                </svg>
               </div>
             </div>
             <div class="assignee-congestion">
-              <div class="assignee-congestion__rendering" style="height: 100%;
-    width: 35%;"></div>
+              <div class="assignee-congestion__rendering" style="width: 35%;"></div>
             </div>
           </div>
           <div class="assignee-panel">
@@ -674,12 +692,89 @@
                 <span class="assignee-name"> • &ltname ...&gt</span>
               </div>
               <div class="tasks-sum-button">
-                <span class="assignee-profile__tasks-sum">4 task(s)</span>
+                <span class="tasks-sum">4 task(s)</span>
+                <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M10.707 18.207L16.414 12.5L10.707 6.79297L9.293 8.20697L13.586 12.5L9.293 16.793L10.707 18.207Z"
+                    fill="#828282"/>
+                </svg>
               </div>
             </div>
             <div class="assignee-congestion">
-              <div class="assignee-congestion__rendering" style="height: 100%;
-    width: 35%;"></div>
+              <div class="assignee-congestion__rendering" style="width: 35%;"></div>
+            </div>
+          </div>
+        </div>
+
+        <div class="dividing-line-wrapper">
+          <div class="dividing-line"></div>
+        </div>
+
+        <h2 class="title">Created / closed tasks</h2>
+
+        <div class="created-closed-tasks-panels">
+          <div class="status-rendering-panels">
+            <div class="status-panel">
+              <div class="status status_bold">Total created tasks today</div>
+              <div class="tasks-sum-button">
+                <span class="tasks-sum tasks-sum_bold">16 task(s)</span>
+                <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M10.707 18.207L16.414 12.5L10.707 6.79297L9.293 8.20697L13.586 12.5L9.293 16.793L10.707 18.207Z"
+                    fill="#828282"/>
+                </svg>
+              </div>
+            </div>
+            <div class="status-panel-congestion">
+              <div class="status-panel-congestion__rendering" style="width: 100%"></div>
+            </div>
+          </div>
+          <div class="status-rendering-panels">
+            <div class="status-panel">
+              <div class="status"> • Already closed</div>
+              <div class="tasks-sum-button">
+                <span class="tasks-sum">12 task(s)</span>
+                <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M10.707 18.207L16.414 12.5L10.707 6.79297L9.293 8.20697L13.586 12.5L9.293 16.793L10.707 18.207Z"
+                    fill="#828282"/>
+                </svg>
+              </div>
+            </div>
+            <div class="status-panel-congestion">
+              <div class="status-panel-congestion__rendering" style="width: 80%"></div>
+            </div>
+          </div>
+          <div class="status-rendering-panels">
+            <div class="status-panel">
+              <div class="status"> • Still open</div>
+              <div class="tasks-sum-button">
+                <span class="tasks-sum">4 task(s)</span>
+                <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M10.707 18.207L16.414 12.5L10.707 6.79297L9.293 8.20697L13.586 12.5L9.293 16.793L10.707 18.207Z"
+                    fill="#828282"/>
+                </svg>
+              </div>
+            </div>
+            <div class="status-panel-congestion">
+              <div class="status-panel-congestion__rendering" style="width: 25%"></div>
+            </div>
+          </div>
+          <div class="status-rendering-panels">
+            <div class="status-panel">
+              <div class="status status_bold">Previosly created tasks closed today</div>
+              <div class="tasks-sum-button">
+                <span class="tasks-sum tasks-sum_bold">5 task(s)</span>
+                <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M10.707 18.207L16.414 12.5L10.707 6.79297L9.293 8.20697L13.586 12.5L9.293 16.793L10.707 18.207Z"
+                    fill="#828282"/>
+                </svg>
+              </div>
+            </div>
+            <div class="status-panel-congestion">
+              <div class="status-panel-congestion__rendering" style="width: 35%"></div>
             </div>
           </div>
         </div>
